# carma-platform

.circleci/: config.yml
cellular_driver/: CMakeLists.txt  README.md  package.xml
cellular_driver/config/: parameters.yaml
cellular_driver/include/cellular_driver/: CellularDriver.hpp  WsHandler.hpp
cellular_driver/launch/: cellular_driver_launch.py
cellular_driver/src/: CellularDriver.cpp  easywsclient.cpp  main.cpp
curlpp/: libcurlpp.so.orig
health_monitor/src/: driver_manager.cpp
prepass_plugin/: CMakeLists.txt  README.md  package.xml
prepass_plugin/include/prepass_plugin/: PrepassPlugin.hpp
prepass_plugin/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
prepass_plugin/src/: PrepassPlugin.cpp  main.cpp
tpms_plugin/: CMakeLists.txt  README.md  package.xml
tpms_plugin/config/: parameters.yaml
tpms_plugin/include/tpms_plugin/: TPMSAnalytics.hpp  TPMSPlugin.hpp  TPMStype.h  reg.hpp
tpms_plugin/launch/: tpms_launch.py
tpms_plugin/src/: TPMSAnalytics.cpp  TPMSPlugin.cpp  main.cpp
truck_inspection_client/config/: parameters.yaml
truck_inspection_client/include/: truck_inspection_client.h
truck_inspection_client/src/: main.cpp  truck_inspection_client.cpp
